<resources>
    <string name="app_name">Recipe</string>
    <string name="name">Name</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="image">Image</string>
    <string name="choose_image">Choose</string>
    <string name="ingredients">Ingredients</string>
    <string name="instructions">Instructions</string>
    <string name="save_recipe">Save</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete_confirmation">Do you want to delete this recipe?</string>
    <string name="name_empty">Please enter the recipe name.</string>
    <string name="category_empty">Please enter the recipe category.</string>
    <string name="area_empty">Please enter the area for the recipe.</string>
    <string name="ingredients_empty">Please enter the ingredients for the recipe.</string>
    <string name="instructions_empty">Please enter the instructions for the recipe.</string>
    <string name="select_picture">Select Picture</string>
    <string name="storage_permission">Storage Permission</string>
    <string name="storage_permission_error">Please granted Storage Permission to access your image for your recipe.</string>
</resources>